added evil doings
