# app/controllers/people_controller.rb
@@ -1,6 +1,10 @@
 # frozen_string_literal: true
 
 class PeopleController < ApplicationController
+  before_action :check_candidate_token
+
+  before_action :evil_long_response
+
   def search
     return head :method_not_allowed if invalid_request?
 
@@ -25,14 +29,14 @@ class PeopleController < ApplicationController
                  .page(req[:page] || 1)
                  .per(25)
 
-    render json: people
+    render json: evil_answer(people)
   end
 
   private
 
   def store_req_data(guid)
     redis.mapped_hmset("requests:#{guid}", req_data)
-    redis.expire("requests:#{guid}", 5.minutes)
+    redis.expire("requests:#{guid}", evil_query_expiry)
     redis.set("requests:#{guid}:ttl", 'nope', px: Random.new.rand(1..777))
   end
 
@@ -44,6 +48,10 @@ class PeopleController < ApplicationController
     req_data.except(:page).values.compact.blank?
   end
 
+  def current_candidate
+    Candidate.find_by_key(request.headers['HTTP_API_KEY'])
+  end
+
   def req_data
     {
       page:  params[:page] || '1',
@@ -51,5 +59,42 @@ class PeopleController < ApplicationController
       name:  params[:name],
       phone: params[:phone]
     }
+  end
+
+  def check_candidate_token
+    return head :unauthorized unless Candidate.not_expired
+                                              .where(
+                                                key: request.headers['X-KLARNA-TOKEN']
+                                              ).present?
+  end
+
+  def evil_answer(people)
+    if current_candidate.evil_wrong_results?
+      people = if people.blank?
+                 User.wrong
+               else
+                 people.or(User.wrong)
+              end
+    end
+
+    people = malform(people) if current_candidate.evil_malformed? && people.present?
+
+    people
+  end
+
+  def malform(people)
+    people.to_json.insert(42, JSON.parse(Net::HTTP.get(URI('http://hipsterjesus.com/api/?paras=1&html=false')))['text'])
+  end
+
+  def evil_long_response
+    sleep Random.new.rand(5..15).seconds if current_candidate.evil_long_response?
+  end
+
+  def evil_query_expiry
+    if current_candidate.evil_expiry?
+      Random.new.rand(1..5).seconds
+    else
+      5.minutes
+    end
   end
 end
